--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Slutprojekt</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="shortcut icon" href="/images/bathtub.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 </head>
 
 <body class="container">
@@ -24,27 +25,27 @@
             </button>
         </div>
     </div>
+    <nav class="navigation">
+        <ul class="primary-navigation">
+            <li><a class="nav-link" href="#">Home</a> </li>
+            <li><a class="nav-link" href="">Who we are</a></li>
+            <li><a class="nav-link" href="">What we do</a></li>
+            <li><a class="nav-link" href="">Contact us</a></li>
+        </ul>
+        <div class="main-header">
+            <img src="/images/bathtub.png" class="logo" alt="logo">
+            <h1 class="header-text">Bath Magic Inc</h1>
+        </div>
+    </nav>
     <header class="header">
-        <nav class="navigation">
-            <ul class="primary-navigation">
-                <li><a class="nav-link" href="#">Home</a> </li>
-                <li><a class="nav-link" href="">Who we are</a></li>
-                <li><a class="nav-link" href="">What we do</a></li>
-                <li><a class="nav-link" href="">Contact us</a></li>
-            </ul>
-            <div class="main-header">
-                <h1 class="header-text">Bath Magic Inc</h1>
-            </div>
-        </nav>
         <div class="hero-banner">
-            <div class="hero-banner-text">
+            <div class=" hero-banner-text">
                 <h2 class="hero-banner-title">Welcome to Bath Magic Inc!</h2>
                 <p class="hero-banner-paragraph">We make your bathroom proud</p>
             </div>
             <div class="buy-now">
                 <a class="buy-now-link" href="">Get started</a>
             </div>
-
         </div>
     </header>
     <main id="main-content" class="main-content">
@@ -65,16 +66,16 @@
                         <h2>Our coatings</h2>
                     </header>
                     <img class="inline-image" src="/images/leaf.png" alt="Leaf picture">
-                    <p>Ask about our 4 hour cure coatings</p>
+                    <p class="div-text">Ask about our 4 hour cure coatings</p>
                 </a>
             </div>
             <div class="drain">
                 <a class="inline-link" href="">
                     <header class="sub-title">
-                        <h2>Do you have a ugly drain?</h2>
+                        <h2>Ugly drain?</h2>
                     </header>
                     <img src="/images/drain.png" class="inline-image" alt="drain">
-                    <p>Make your bathroom proud today</p>
+                    <p class="div-text">Make your bathroom proud today</p>
                 </a>
             </div>
             <div class="no-slipups">
@@ -83,7 +84,7 @@
                         <h2>No slipups</h2>
                     </header>
                     <img src="/images/no-slip.png" class="inline-image" alt="no-slip">
-                    <p>Bath safety</p>
+                    <p class="div-text">Bath safety</p>
                 </a>
 
             </div>
@@ -93,7 +94,7 @@
                         <h2>Locations</h2>
                     </header>
                     <img src="/images/locations.png" class="inline-image" alt="locations">
-                    <p>Find a location near you</p>
+                    <p class="div-text">Find a location near you</p>
                 </a>
             </div>
 
@@ -115,8 +116,8 @@
             <li><a class="footer-link" href="">Contact us</a></li>
         </ul>
     </footer>
-
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </body>
 
 </html>
