--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
                 <h2 class="hero-banner-title">Welcome to Bath Magic Inc!</h2>
                 <p class="hero-banner-paragraph">We make your bathroom proud</p>
             </div>
-            <div class="buy-now">
-                <a class="buy-now-link" href="">Get started</a>
-            </div>
+            <a class="button" href="/coatings/coatings.html">
+                <div class="get-started">
+                    <p class="button-text"> Get started</p>
+                </div>
+            </a>
+
         </div>
     </header>
     <main id="main-content" class="main-content">
@@ -54,69 +57,126 @@
                 <header class="sub-title">
                     <h2>Do you have a uglytub?</h2>
                 </header>
-                <img src="/images/bathtub.png" class="bathtub" alt="bathtub">
                 <p class="my-text" id="myText">Make your bathroom proud today</p>
             </div>
         </section>
 
         <section class="choices">
-            <div class="coatings">
-                <a class="inline-link" href="/coatings/coatings.html">
+            <a class="inline-link" href="/coatings/coatings.html">
+                <div class="inline">
                     <header class="sub-title">
                         <h2>Our coatings</h2>
                     </header>
                     <img class="inline-image" src="/images/leaf.png" alt="Leaf picture">
                     <p class="div-text">Ask about our 4 hour cure coatings</p>
-                </a>
-            </div>
-            <div class="drain">
-                <a class="inline-link" href="">
+                </div>
+            </a>
+
+            <a class="inline-link" href="">
+                <div class="inline">
                     <header class="sub-title">
-                        <h2>Ugly drain?</h2>
+                        <h2>Ugly drain</h2>
                     </header>
                     <img src="/images/drain.png" class="inline-image" alt="drain">
                     <p class="div-text">Make your bathroom proud today</p>
-                </a>
-            </div>
-            <div class="no-slipups">
-                <a class="inline-link" href="">
+                </div>
+            </a>
+            <a class="inline-link" href="">
+                <div class="inline">
                     <header class="sub-title">
                         <h2>No slipups</h2>
                     </header>
                     <img src="/images/no-slip.png" class="inline-image" alt="no-slip">
                     <p class="div-text">Bath safety</p>
-                </a>
-
-            </div>
-            <div class="locations">
-                <a class="inline-link" href="">
+                </div>
+            </a>
+            <a class="inline-link" href="">
+                </div>
+                <div class="inline">
                     <header class="sub-title">
                         <h2>Locations</h2>
                     </header>
                     <img src="/images/locations.png" class="inline-image" alt="locations">
                     <p class="div-text">Find a location near you</p>
+                </div>
+            </a>
+
+
+        </section>
+
+        <section class="shop-bathtub">
+            <div class="shop-bathtub-items">
+                <h3>Bathtub</h3>
+                <h2 class="shop-title">Comfort at home</h2>
+                <span class="line"></span>
+                <p>Discover a bathtub style that delights all of your senses.
+                </p>
+                <a class="button" href="/coatings/coatings.html">
+                    <div class="get-started">
+                        <p class="button-text"> Get started</p>
+                    </div>
                 </a>
             </div>
+            <div class="bathtub-image">
+                <img class="bathtub-section-image" src="/images/bathing_stage.jpg" alt="">
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         </section>
 
 
-
-
-
-
-
     </main>
-    <footer class="footer">
-        <ul class="footer-links">
-            <li><a class="footer-link" href="#">Home</a></li>
-            <li><a class="footer-link" href="">Buy a bathtub</a></li>
-            <li><a class="footer-link" href="">About us</a></li>
-            <li><a class="footer-link" href="">Contact us</a></li>
-        </ul>
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>About Us</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h3>Contact Us</h3>
+                    <p>123 Main Street, Anytown USA</p>
+                    <p>Phone: 555-555-5555</p>
+                    <p>Email: info@example.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-footer">
+            <p>&copy; 2023 Example Company. All Rights Reserved.</p>
+        </div>
     </footer>
-    <script src="index.js"></script>
+
+    <script src="index.js">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </body>
 
