--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="mobile-menu__title"><a class="mobile-link" href="#">Home</a></p>
         <div class="mobile-menu__button">
             <button class="btn-hamburger">
-                <svg fill="var(--btn-hamburger)" class="icon-hamburger" viewbox="0 0 100 100" width="250">
+                <svg class="icon-hamburger" viewbox="0 0 100 100" width="250">
                     <rect class="line top" width="80" height="10" x="10" y="25" rx="2"></rect>
                     <rect class="line middle" width="80" height="10" x="10" y="45" rx="2"></rect>
                     <rect class="line bottom" width="80" height="10" x="10" y="65" rx="2"></rect>
@@ -61,46 +61,6 @@
             </div>
         </section>
 
-        <section class="choices">
-            <a class="inline-link" href="/coatings/coatings.html">
-                <div class="inline">
-                    <header class="sub-title">
-                        <h2>Our coatings</h2>
-                    </header>
-                    <img class="inline-image" src="/images/leaf.png" alt="Leaf picture">
-                    <p class="div-text">Ask about our 4 hour cure coatings</p>
-                </div>
-            </a>
-
-            <a class="inline-link" href="">
-                <div class="inline">
-                    <header class="sub-title">
-                        <h2>Ugly drain</h2>
-                    </header>
-                    <img src="/images/drain.png" class="inline-image" alt="drain">
-                    <p class="div-text">Make your bathroom proud today</p>
-                </div>
-            </a>
-            <a class="inline-link" href="">
-                <div class="inline">
-                    <header class="sub-title">
-                        <h2>No slipups</h2>
-                    </header>
-                    <img src="/images/no-slip.png" class="inline-image" alt="no-slip">
-                    <p class="div-text">Bath safety</p>
-                </div>
-            </a>
-            <a class="inline-link" href="">
-                </div>
-                <div class="inline">
-                    <header class="sub-title">
-                        <h2>Locations</h2>
-                    </header>
-                    <img src="/images/locations.png" class="inline-image" alt="locations">
-                    <p class="div-text">Find a location near you</p>
-                </div>
-            </a>
-
 
         </section>
 
@@ -113,67 +73,61 @@
                 </p>
                 <a class="button" href="/coatings/coatings.html">
                     <div class="get-started">
-                        <p class="button-text"> Get started</p>
+                        <p class="button-text">Shop now</p>
                     </div>
                 </a>
             </div>
             <div class="bathtub-image">
                 <img class="bathtub-section-image" src="/images/bathing_stage.jpg" alt="">
-
-
-
             </div>
+        </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <section class="services-section">
+            <div class="services-content">
+                <div class="services-text">
+                    <h2 class="services-title">
+                        Our services
+                    </h2>
+                    <span></span>
+                    <p class="services-description">
+                        We offer a wide range of services.
+                </div>
+                <div class="services-containers">
+                    <div class="container-1">
+                        <img class="services-image" src="/images/leaf.png" alt="leaf pic">
+                        <h3>Coatings</h3>
+                        <p class="services-paragraph">Our coatings are the best in the world. We offer a wide range of
+                            coatings to
+                            make your bathroom
+                            proud.</p>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="container-2">
+                        <img class="services-image" src="/images/leaf.png" alt="leaf pic">
+                        <h3>Coatings</h3>
+                        <p class="services-paragraph">Our coatings are the best in the world. We offer a wide range of
+                            coatings to
+                            make your bathroom
+                            proud.</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
     </main>
-    <footer class="main-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h3>About Us</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h3>Contact Us</h3>
-                    <p>123 Main Street, Anytown USA</p>
-                    <p>Phone: 555-555-5555</p>
-                    <p>Email: info@example.com</p>
-                </div>
-            </div>
-        </div>
-        <div class="bottom-footer">
-            <p>&copy; 2023 Example Company. All Rights Reserved.</p>
+    <footer>
+        <div class="footer-container">
+            <h2 class="footer-title">Useful links</h2>
+            <ul class="footer-navigation">
+                <li><a class="footer-link" href="#">Terms of Use</a></li>
+                <li><a class="footer-link" href="#">Privacy Policy</a></li>
+                <li><a class="footer-link" href="#">Contact Us</a></li>
+            </ul>
+            <p>&copy; 2023 Bath Magic Inc. All Rights Reserved.</p>
         </div>
     </footer>
+
 
     <script src="index.js">
     </script>
