--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
     </header>
     <main id="main-content" class="main-content">
-        <section class="section-uglytub">
-            <div class="uglytub">
+        <section class="uglytub-section">
+            <div class="uglytub-div">
                 <header class="sub-title">
                     <h2>Do you have a uglytub?</h2>
                 </header>
@@ -64,21 +64,23 @@
 
         </section>
 
-        <section class="shop-bathtub">
-            <div class="shop-bathtub-items">
-                <h3>Bathtub</h3>
-                <h2 class="shop-title">Comfort at home</h2>
-                <span class="line"></span>
-                <p>Discover a bathtub style that delights all of your senses.
-                </p>
-                <a class="button" href="/coatings/coatings.html">
-                    <div class="get-started">
-                        <p class="button-text">Shop now</p>
-                    </div>
-                </a>
-            </div>
-            <div class="bathtub-image">
-                <img class="bathtub-section-image" src="/images/bathing_stage.jpg" alt="">
+        <section class="bathtub-section">
+            <div class="bathtub-container">
+                <div class="shop-bathtub-items">
+                    <h3>Bathtub</h3>
+                    <h2 class="shop-title">Comfort at home</h2>
+                    <span class="line"></span>
+                    <p>Discover a bathtub style that delights all of your senses.
+                    </p>
+                    <a class="button" href="/coatings/coatings.html">
+                        <div class="get-started">
+                            <p class="button-text">Shop now</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="bathtub-image">
+                    <img class="bathtub-section-image" src="/images/bathing_stage.jpg" alt="">
+                </div>
             </div>
         </section>
 
