--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Slutprojekt</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="shortcut icon" href="/images/bathtub.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 </head>
 
 <body class="container">
@@ -28,8 +27,8 @@
     <nav class="navigation">
         <ul class="primary-navigation">
             <li><a class="nav-link" href="#">Home</a> </li>
-            <li><a class="nav-link" href="">Who we are</a></li>
-            <li><a class="nav-link" href="">What we do</a></li>
+            <li><a class="nav-link" href="">Get started</a></li>
+            <li><a class="nav-link" href="#services">Services</a></li>
             <li><a class="nav-link" href="">Contact us</a></li>
         </ul>
         <div class="main-header">
@@ -65,11 +64,11 @@
                 <div class="shop-bathtub-items">
                     <h3>Bathtub</h3>
                     <h2 class="shop-title">Comfort at home</h2>
-                    <span class="line"></span>
+                    <div class="horizontal-line"></div>
                     <p>Discover a bathtub style that delights all of your senses.
                     </p>
                     <a class="button" href="/coatings/coatings.html">
-                        <div class="get-started">
+                        <div class="shop-now">
                             <p class="button-text">Shop now</p>
                         </div>
                     </a>
@@ -80,11 +79,11 @@
             </div>
         </section>
 
-        <section class="services-section">
+        <section class="services-section" id="services">
             <div class="services-content">
                 <div class="services-text">
                     <h2 class="services-title">
-                        Our services
+                        Services we provide
                     </h2>
                     <span></span>
                     <p class="services-description">
@@ -92,7 +91,7 @@
                 </div>
                 <div class="services-containers">
                     <div class="container-1">
-                        <img class="services-image" src="/images/leaf.png" alt="leaf pic">
+                        <img class="services-image" src="/images/cleaning-gear.png" alt="cleaning gear image">
                         <h3>Coatings</h3>
                         <p class="services-paragraph">Our coatings are the best in the world. We offer a wide range of
                             coatings to
@@ -101,18 +100,25 @@
                     </div>
                     <div class="vertical-line"></div>
                     <div class="container-2">
-                        <img class="services-image" src="/images/leaf.png" alt="leaf pic">
-                        <h3>Coatings</h3>
-                        <p class="services-paragraph">Our coatings are the best in the world. We offer a wide range of
-                            coatings to
-                            make your bathroom
-                            proud.</p>
+                        <img class="services-image" src="/images/drain.png" alt="drain image">
+                        <h3>Drain Recacing</h3>
+                        <p class="services-paragraph">
+                            We reface your drain to make it look like new, for the cheapest price online.
+                        </p>
+                        </p>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="container-3">
+                        <img class="services-image" src="/images/no-diving.png" alt="leaf image">
+                        <h3>Bath Safety</h3>
+                        <p class="services-paragraph">We insure that your bathtub is safe and secure for you and
+                            your
+                            family.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
-
-
     </main>
     <footer>
         <div class="footer-container">
@@ -125,11 +131,7 @@
             <p>&copy; 2023 Bath Magic Inc. All Rights Reserved.</p>
         </div>
     </footer>
-
-
-    <script src="index.js">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
