--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                             make your bathroom
                             proud.</p>
                     </div>
+                    <div class="horizontal-line-services"></div>
                     <div class="vertical-line"></div>
                     <div class="container-2">
                         <img class="services-image" src="/images/drain.png" alt="drain image">
@@ -105,6 +106,7 @@
                         </p>
                     </div>
                     <div class="vertical-line"></div>
+                    <div class="horizontal-line-services"></div>
                     <div class="container-3">
                         <img class="services-image" src="/images/no-diving.png" alt="leaf image">
                         <h3>Bath Safety</h3>
