--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <nav class="navigation">
         <ul class="primary-navigation">
             <li><a class="nav-link" href="#">Home</a> </li>
-            <li><a class="nav-link" href="">Get started</a></li>
+            <li><a class="nav-link" href="/buy-now/index.html">Get started</a></li>
             <li><a class="nav-link" href="#services">Services</a></li>
             <li><a class="nav-link" href="">Contact us</a></li>
         </ul>
-        <div class="main-header">
+        <header class="main-header">
             <img src="/images/bathtub.png" class="logo" alt="logo">
-            <h1 class="header-text">Bath Magic Inc</h1>
-        </div>
+            <h1 class="header-text">Bath magic inc</h1>
+        </header>
     </nav>
     <header class="header">
         <div class="hero-banner">
@@ -42,7 +42,7 @@
                 <h2 class="hero-banner-title">Welcome to Bath Magic Inc!</h2>
                 <p class="hero-banner-paragraph">We make your bathroom proud</p>
             </div>
-            <a class="button" href="/coatings/coatings.html">
+            <a class="button" href="/buy-now/index.html">
                 <div class="get-started">
                     <p class="button-text"> Get started</p>
                 </div>
@@ -67,9 +67,9 @@
                     <div class="horizontal-line"></div>
                     <p>Discover a bathtub style that delights all of your senses.
                     </p>
-                    <a class="button" href="/coatings/coatings.html">
-                        <div class="shop-now">
-                            <p class="button-text">Shop now</p>
+                    <a class="button" href="/buy-now/index.html">
+                        <div class="browse-bathtubs">
+                            <p class="button-text">Browse bathtubs</p>
                         </div>
                     </a>
                 </div>
