--- a/buy-now/index.html
+++ b/buy-now/index.html
@@ -42,6 +42,9 @@
                 <h2 class="text">
                     Find the perfect bathtub for your home
                 </h2>
+                <p class="paragraph">
+                    Our bathtubs are made with the highest quality materials and are designed to last a lifetime
+                </p>
             </div>
         </div>
         <main class="main-content">
