--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         </div>
     </header>
     <main id="main-content" class="main-content">
-        <section class="uglytub-section">
-            <div class="uglytub-div">
+        <!--Har bara med denna section för att visa att jag kan lite basic javascript-->
+        <section class="basic-javascript-section">
+            <div class="javascript-div">
                 <header class="sub-title">
                     <h2>Do you have a uglytub?</h2>
                 </header>
